# GConf2

./: .cvsignore  ChangeLog  Makefile.am  NEWS  autogen.sh  configure.ac  configure.in  gconf-2.0.pc.in  gconf-2.m4.in  gconf.m4.in  gconf.spec.in  gconfd.service.in
backends/: Makefile.am  markup-backend.c  markup-tree.c  markup-tree.h  xml-backend.c  xml-dir.c  xml-entry.c  xml-test.c
defaults/: gconf-defaults-main.c  gconf-defaults.c
doc/gconf/tmpl/: gconf-backend.sgml  gconf-engine.sgml  gconf-unused.sgml
examples/: basic-gconf-app.c  complex-gconf-app.c
gconf/: .gitignore  Makefile.am  default.path.in  gconf-backend.c  gconf-client.c  gconf-corba-utils.c  gconf-corba-utils.h  gconf-corba.c  gconf-corba.h  gconf-database-corba.c  gconf-database-corba.h  gconf-database-dbus.c  gconf-database-dbus.h  gconf-database.c  gconf-database.h  gconf-dbus-utils.c  gconf-dbus-utils.h  gconf-dbus.c  gconf-dbus.h  gconf-internals.c  gconf-internals.h  gconf-sanity-check.c  gconf-sources.c  gconf-sources.h  gconf-value.c  gconf.c  gconf.h  gconf.service.in  gconfd-corba.c  gconfd-corba.h  gconfd-dbus.c  gconfd-dbus.h  gconfd.c  gconfd.h  gconftool.c  simple-test.c  testgconfclient.c
gsettings/: gconfsettingsbackend-module.c  gconfsettingsbackend.c  gconfsettingsbackend.h  gsettings-data-convert.c  gsettings-schema-convert
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  am.po  ar.po  ast.po  az.po  be.po  bg.po  bn.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  hi.po  hr.po  hu.po  hy.po  id.po  it.po  ja.po  ko.po  (+34 more)
standard-schemas/: desktop.schemas
tests/: Makefile.am  dbus-glue.c  dbus-glue.h  testactivationraces.sh  testbackend.c  testchangeset.c  testdirlist.c  testgconf.c  testpersistence.c  testschemas.c
wrappers/gtk/: Makefile.am
